src/test/ui/issues/issue-21946.stderr
error[E0275]: overflow evaluating the requirement `<FooStruct as Foo>::A`
  --> $DIR/issue-21946.rs:7:6
   |
LL | impl Foo for FooStruct {
   |      ^^^

error[E0275]: overflow evaluating the requirement `<FooStruct as Foo>::A`
  --> $DIR/issue-21946.rs:9:5
   |
LL |     type A = <FooStruct as Foo>::A;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0275`.
